--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
+  "homepage": "https://connor64.github.io/spidr-demo",
   "name": "spidr-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -28,6 +29,5 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  },
-  "homepage": "https://connor64.github.io/spidr-demo"
+  } 
 }
